--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">StartWarsApp</string>
+    <string name="app_name">TMDBApp</string>
+    <string name="retry">Retry</string>
+    <string name="no_internet_connection_title">Network Error</string>
+    <string name="no_internet_connection_message">Please check your internet connection.</string>
+    <string name="not_found_error_title">Something went wrong</string>
+    <string name="not_found_error_message">Failed to load characters.</string>
 </resources>
