Add string labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="no_internet_connection_message">Please check your internet connection.</string>
     <string name="not_found_error_title">Something went wrong</string>
     <string name="not_found_error_message">Failed to load characters.</string>
+    <string name="screen_actor_detail_title">Actor Details</string>
+    <string name="name_label">Name</string>
+    <string name="original_name_label">Original Name</string>
+    <string name="gender_label">Gender</string>
+    <string name="department_label">Department</string>
+    <string name="known_for_label">Known For</string>
+    <string name="biography_label">Biography</string>
+    <string name="favorite_label">Favorite</string>
+    <string name="unfavorite_label">Unfavorite</string>
 </resources>
